manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bytebelt
  labels:
    app: bytebelt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bytebelt
  template:
    metadata:
      labels:
        app: bytebelt
    spec:
      containers:
      - name: bytebelt
        image: aperano/bytebelt:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: bytebelt-service
spec:
  type: LoadBalancer
  selector:
    app: bytebelt
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
