manifests/ingress-nginx-controller-admission.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller-admission
  namespace: default
spec:
  ports:
  - port: 443
    targetPort: 8443
    protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: admission-webhook
