manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bytebelt-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # cert-manager pour SSL
    cert-manager.io/acme-challenge-type: http01
spec:
  ingressClassName: nginx  # Ajout de ingressClassName pour spécifier la classe d'ingress
  rules:
  - host: gavinaperano.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bytebelt-service
            port:
              number: 80
  tls:
  - hosts:
    - gavinaperano.com
    secretName: tls-secret  # Le nom du secret TLS généré par cert-manager dans certificat.yaml
